<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        app:title="@string/settings_payment_title"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            app:key="payday"
            app:title="@string/set_payday_button"
            app:summary="@string/payday_not_set"
            app:icon="@drawable/ic_calendar_today" />

        <androidx.preference.EditTextPreference
            app:key="salary"
            app:title="@string/set_salary_button_text"
            app:dialogTitle="@string/dialog_set_salary_title"
            android:inputType="number"
            app:icon="@drawable/ic_payments" />

        <androidx.preference.EditTextPreference
            app:key="monthly_savings"
            app:title="@string/set_monthly_savings_button"
            app:dialogTitle="@string/dialog_set_monthly_savings_title"
            android:inputType="number"
            app:icon="@drawable/ic_account_balance" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="@string/settings_general_title"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreferenceCompat
            app:key="weekend_adjustment"
            app:title="@string/weekend_adjustment_label"
            app:summary="@string/weekend_adjustment_summary"
            app:icon="@drawable/ic_date_range" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="auto_saving_enabled"
            app:title="@string/auto_saving_title"
            app:summary="@string/auto_saving_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_yard" />

        <Preference
            app:key="recurring_transactions"
            app:title="@string/recurring_transactions_title"
            app:summary="@string/recurring_transactions_summary"
            app:icon="@drawable/autorenew"/>

        <ListPreference
            app:key="theme"
            app:title="@string/theme_title"
            app:summary="%s"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="System"
            app:icon="@drawable/ic_dark_mode" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="auto_backup_enabled"
            app:title="@string/auto_backup_title"
            app:summary="@string/auto_backup_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_backup" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="@string/settings_communication_title"
        app:iconSpaceReserved="false">

        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy_title"
            app:summary="@string/privacy_policy_summary"
            app:icon="@drawable/ic_privacy_policy" />

        <Preference
            app:key="send_feedback"
            app:title="@string/send_feedback_title"
            app:summary="@string/send_feedback_summary"
            app:icon="@drawable/ic_send_feedback" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="account_category"
        app:title="@string/account_category_title"
        app:iconSpaceReserved="false">

        <Preference
            app:key="google_account"
            app:title="@string/google_sign_in_title"
            app:summary="@string/google_sign_in_summary"
            app:icon="@drawable/ic_google_logo"/>

        <Preference
            app:key="delete_account"
            app:title="@string/delete_account_title"
            app:summary="@string/delete_account_summary"
            app:icon="@drawable/ic_delete_forever"
            android:visible="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>