<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_achievements"
        android:icon="@drawable/ic_auto_awesome"
        android:title="@string/achievements_title"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorPrimary" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_backup"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:title="@string/action_restore"
        app:showAsAction="never" />

</menu>