<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".onboarding.OnboardingSalaryFragment">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:text="@string/onboarding_salary_title" />

    <TextView
        android:id="@+id/subtitleTextView"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorSecondary"
        tools:text="@string/onboarding_salary_subtitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:prefixText="@string/currency_symbol"
        app:prefixTextColor="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            tools:hint="@string/onboarding_salary_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>